--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
     </dl>
     <a id="merge_download" download="merged_events.json"></a>
   </section>
-  <script src="/fl-events.e31bb0bc.js"></script>
+  <script src="./fl-events.e31bb0bc.js"></script>
 </body>
 </html>
